--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,7 +37,7 @@ import { FOOTER_DESCRIPTION, STREET, LONDON_PHONE_NO } from "../consts";
             <hr>
 
             <div class="nap_data">
-                <p>Clean Network</p>
+                <p>The Clean Network</p>
                 <p set:html={STREET}></p>
                 <p>London EC1M 4NH</p>
                 <p>United Kingdom</p>
