--- a/src/components/MapSwitch.astro
+++ b/src/components/MapSwitch.astro
@@ -105,9 +105,9 @@
 <script>
     const iframeCtnr = document.querySelector('.iframe_ctnr')
 
-    const londonIframe = '<iframe width="100%" height="100%" title="Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>'
+    const londonIframe = '<iframe width="100%" height="100%" title="The Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>'
 
-    const birminghamIframe = '<iframe width="100%" height="100%" title="Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=37%20Regents%20Place,%20Birmingham,%20B3%201UG+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>'
+    const birminghamIframe = '<iframe width="100%" height="100%" title="The Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=37%20Regents%20Place,%20Birmingham,%20B3%201UG+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>'
 
     const mapSwitcher = document.querySelector('.switch input')
 
