--- a/src/pages/jobs/index.astro
+++ b/src/pages/jobs/index.astro
@@ -54,7 +54,7 @@ import { JOBS_TITLE, JOBS_DESCRIPTION, JOBS_KEYWORDS, JOBS_H1, JOBS_TEXT_BODY } 
                         </p>
             
                         <p>
-                            <button type="submit" aria-label="Submit contact form">Apply for Clean Network</button>
+                            <button type="submit" aria-label="Submit contact form">Apply for The Clean Network</button>
                                     
                             <noscript>You need to enable JavaScript on your browser to submit emails.</noscript>
                         </p>
