--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -146,7 +146,7 @@ import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS,
             item={{
                 "@context": "https://schema.org",
                 "@type": "LocalBusiness",
-                "name": "The Clean Network | Services",
+                "name": "The Clean Network",
                 "image": "/og/social-image.jpg",
                 "@id": currentURL,
                 "url": currentURL,
