--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -330,7 +330,7 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
 
     header nav {
         width: calc(100% - (100% - var(--base-width)) / 2);
-        background-color: rgb(230 238 255 / 96%);
+        background-color: var(--light);
         font-size: clamp(1.6rem,5vw,2.2rem);
         backdrop-filter: blur(0.5rem);
         border-radius: 0 0 0 1.4rem;
