--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,6 +29,7 @@ import { FOOTER_DESCRIPTION, STREET, LONDON_PHONE_NO } from "../consts";
             <a href="/locations/"><span></span>Location</a>
             <a href="/about/"><span></span>About</a>
             <a href="/contact/"><span></span>Contact</a>
+            <a href="/privacy-policy/"><span></span>Privacy Policy</a>
         </nav>
 
         <div>
