--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -40,6 +40,8 @@ import { SITE_DESCRIPTION, SITE_KEYWORDS, ABOUT_TITLE, ABOUT_DESCRIPTION, ABOUT_
                         
                             <div class="flex column">
                                 <a href="tel:+44-020-3411-0275"><span>London:</span> 020 3411 0275</a>
+
+                                <a href="/privacy-policy/"><span>Privacy Policy</span></a>
                         
                                 <!-- <a href="tel:+44-0121-3927529"><span>Birmingham:</span> 0121 3927529</a> -->
                             </div>
