--- a/src/styles/subpages.css
+++ b/src/styles/subpages.css
@@ -203,6 +203,32 @@ h2::after {
     text-transform: lowercase;
 }
 
+.txt_ctnr {
+    width: clamp(9rem, 89vw, 85rem);
+    margin-inline: auto;
+    padding-block: clamp(3rem, 5vw, 6rem);
+}
+
+main > .txt_ctnr p {
+    font-size: clamp(1.5rem, 3.8vw, 1.7rem);
+    margin-bottom: 1rem;
+    line-height: 1.6;
+}
+
+main > .txt_ctnr b, main > .txt_ctnr strong {
+    font-weight: 500;
+}
+
+main > .txt_ctnr h2 {
+    margin-block: 3rem 1.2rem;
+    font-size: 3rem;
+    color: var(--primary-a);
+}
+
+
+
+
+
 @media screen and (min-width:850px) {
     .panel > .ctnr {
         flex-direction: row;
