--- a/src/layouts/SubpageLayout.astro
+++ b/src/layouts/SubpageLayout.astro
@@ -4,7 +4,7 @@ const { title, description, keywords, metaTitle, metaDescription, metaKeywords }
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import BodyGTM from "../components/BodyGTM.astro";
+// import BodyGTM from "../components/BodyGTM.astro";
 
 import "../styles/subpages.css";
 
@@ -20,7 +20,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS } from "../consts";
         keywords={metaKeywords ? metaKeywords : SITE_KEYWORDS} />
     </head>
     <body>
-        <BodyGTM/>
+        <!-- <BodyGTM/> -->
         <Header />
         
         <main>
