--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -22,7 +22,7 @@ import Header from "../../components/Header.astro";
 import BaseHead from "../../components/BaseHead.astro";
 import Footer from "../../components/Footer.astro";
 import ContactSection from "../../components/ContactSection.astro"
-import BodyGTM from "../../components/BodyGTM.astro";
+// import BodyGTM from "../../components/BodyGTM.astro";
 
 import "../../styles/subpages.css"
 import "../../styles/collections.css"
@@ -40,7 +40,7 @@ import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS,
     </head>
 
     <body>
-        <BodyGTM/>
+        <!-- <BodyGTM/> -->
         <Header />
 
         <main>
