--- a/src/pages/sectors/[...slug].astro
+++ b/src/pages/sectors/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { CollectionEntry, getCollection } from "astro:content";
-import SubpageLayout from "../../layouts/SubpageLayout.astro";
+import SubpageLayout from "../../layouts/BaseLayout.astro";
 import ContactSection from "../../components/ContactSection.astro"
 
 export async function getStaticPaths() {
