--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -1,4 +1,6 @@
 ---
+import BaseLayout from "../../layouts/BaseLayout.astro";
+
 import '../../styles/subpages.css'
 import '../../styles/about.css'
 
@@ -13,80 +15,70 @@ import { SITE_DESCRIPTION, SITE_KEYWORDS, ABOUT_TITLE, ABOUT_DESCRIPTION, ABOUT_
 
 ---
 
-<html lang="en">
-    <head>
-        <BaseHead title={ABOUT_TITLE} description={ABOUT_DESCRIPTION ? ABOUT_DESCRIPTION : SITE_DESCRIPTION} keywords={ABOUT_KEYWORDS ? ABOUT_KEYWORDS : SITE_KEYWORDS} />
-    </head>
+<BaseLayout title={ABOUT_TITLE} description={ABOUT_DESCRIPTION ? ABOUT_DESCRIPTION : SITE_DESCRIPTION} keywords={ABOUT_KEYWORDS ? ABOUT_KEYWORDS : SITE_KEYWORDS}>
+    <main>
+        <section class="panel">
+            <div class="ctnr">
+                <div class="content reveal">
+                    <h1 set:html={ABOUT_H1}></h1>
 
-    <body>
-        <Header />
+                    <h2 set:html={ABOUT_H2}></h2>
 
-        <main>
-            <section class="panel">
-                <div class="ctnr">
-                    <div class="content reveal">
-                        <h1 set:html={ABOUT_H1}></h1>
-    
-                        <h2 set:html={ABOUT_H2}></h2>
-    
-                        <div class="body" set:html={ABOUT_TEXT_BODY}></div>
+                    <div class="body" set:html={ABOUT_TEXT_BODY}></div>
 
-                        <div class="bt_ctnr flex">
-                            <div class="ctas flex">
-                                <a href="#contact" class="cta">Get a Quote</a>
+                    <div class="bt_ctnr flex">
+                        <div class="ctas flex">
+                            <a href="#contact" class="cta">Get a Quote</a>
 
-                                <a href="/jobs/" class="job_cta">Work with us</a>
-                            </div>
-                        
-                            <div class="flex column">
-                                <a href="tel:+44-020-3411-0275"><span>London:</span> 020 3411 0275</a>
-
-                                <a href="/privacy-policy/"><span>Privacy Policy</span></a>
-                        
-                                <!-- <a href="tel:+44-0121-3927529"><span>Birmingham:</span> 0121 3927529</a> -->
-                            </div>
+                            <a href="/jobs/" class="job_cta">Work with us</a>
                         </div>
+                    
+                        <div class="flex column">
+                            <a href="tel:+44-020-3411-0275"><span>London:</span> 020 3411 0275</a>
 
-                        <ul class="bullets">
-                            <li>
-                                <span class="icon floor"></span>
-                                Specialist Floor & Carpet Cleaning Service
-                            </li>
-
-                            <li>
-                                <span class="icon cleaning"></span>
-                                Cleaning Service
-                            </li>
-
-                            <li>
-                                <span class="icon pest"></span>
-                                Pest Control
-                            </li>
-
-                            <li>
-                                <span class="icon hygiene"></span>
-                                Hygiene Services
-                            </li>
-
-                            <li>
-                                <span class="icon waste"></span>
-                                Waste Management
-                            </li>
-                        </ul>
+                            <a href="/privacy-policy/"><span>Privacy Policy</span></a>
+                    
+                            <!-- <a href="tel:+44-0121-3927529"><span>Birmingham:</span> 0121 3927529</a> -->
+                        </div>
                     </div>
 
-                    <div class="image reveal">
-                        <!-- <picture>
-                            <source srcset="/images/office01.webp">
-                            <img src="/images/office01.jpg" alt="The Clean Network logo">
-                        </picture> -->
-                    </div>
+                    <ul class="bullets">
+                        <li>
+                            <span class="icon floor"></span>
+                            Specialist Floor & Carpet Cleaning Service
+                        </li>
+
+                        <li>
+                            <span class="icon cleaning"></span>
+                            Cleaning Service
+                        </li>
+
+                        <li>
+                            <span class="icon pest"></span>
+                            Pest Control
+                        </li>
+
+                        <li>
+                            <span class="icon hygiene"></span>
+                            Hygiene Services
+                        </li>
+
+                        <li>
+                            <span class="icon waste"></span>
+                            Waste Management
+                        </li>
+                    </ul>
                 </div>
-            </section>
 
-            <ContactSection />
-        </main>
+                <div class="image reveal">
+                    <!-- <picture>
+                        <source srcset="/images/office01.webp">
+                        <img src="/images/office01.jpg" alt="The Clean Network logo">
+                    </picture> -->
+                </div>
+            </div>
+        </section>
 
-        <Footer />
-    </body>
-</html>
+        <ContactSection />
+    </main>
+</BaseLayout>
