--- a/src/pages/protected/pitch-deck/index.astro
+++ b/src/pages/protected/pitch-deck/index.astro
@@ -4,7 +4,7 @@ import PitchLayout from "../../../layouts/PitchLayout.astro";
 
 import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS } from "../../../consts";
 
-import "../../styles/pitch.css"
+import "../../../styles/pitch.css"
 
 ---
 
